<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/et_text_to_speech"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:ems="10"
        android:gravity="start|top"
        android:layout_margin="5dp"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_play_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/play_audio" />

    <Switch
        android:id="@+id/sw_play_over_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/play_over_bluetooth" />
    <Switch
        android:id="@+id/sw_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/switch_1" />
    <Switch
        android:id="@+id/sw_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/switch_2" />
    <Switch
        android:id="@+id/sw_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/switch_3" />
</LinearLayout>